# clauseinsight

./: .coveragerc  .gitignore  LICENSE  README.md  clauseinsight_gemini_to_openai_docs_fix.patch  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: metadata.db
data/chroma/: chroma.sqlite3
docs/: architecture.md
docs/adr/: ADR-001-chromadb.md  ADR-002-clause-chunking.md  ADR-003-llm-choice.md
src/: parser.py
src/obligations/: extractor.py  obligation_labels.py
src/pipeline/: __init__.py  chunker.py  embedder.py  parser.py
src/retrieval/: context_builder.py  retriever.py
src/risk/: risk_labels.py  scanner.py  web_grounding.py
src/ui/: app.py  theme.py
src/ui/pages/: 1_upload.py  2_qa.py  3_scanner.py  4_obligations.py
src/utils/: executive_summary.py  logger.py  store.py
tests/: conftest.py
tests/obligations/: conftest.py  test_extractor.py
tests/pipeline/: test_chunker.py  test_embedder.py  test_parser.py
tests/retrieval/: test_retriever.py
tests/risk/: conftest.py  test_scanner.py  test_web_grounding.py
tests/utils/: test_executive_summary.py
