[project]
name = "clauseinsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black==26.5.1",
    "chromadb==1.5.9",
    "ddgs>=9.0.0",
    "diskcache==5.6.3",
    "openai>=1.12.0",
    "pandas==3.0.3",
    "pymupdf==1.27.2.3",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "python-dotenv==1.2.2",
    "ruff==0.15.20",
    "streamlit==1.58.0",
    "streamlit-extras==1.6.0",
    "tenacity==9.1.4",
]

[tool.pyright]
extraPaths = ["."]
